# SimpleRenderer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README-cn.md  README.md  build.sh  readme.md  run.sh
.github/workflows/: cmake.yml  workflow.yml
cmake/: 3rd.cmake  add_header.cmake  compile_config.cmake  config.h.in  functions.cmake  project_config.cmake
cmake/sdl2/: FindSDL2.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake  README.md
demo/bump/: main.cpp  render.cpp  render.h
demo/phong光照&&光照颜色变化/: main.cpp  render.cpp  render.h
demo/phong光照&&光照颜色变化/exe可执行文件/: GO.ilk
demo/加载模型/: CMakeCache.txt  cmake_install.cmake  main.cpp  rasterize.h  render.cpp  render.h
demo/基础pbr材质球/: main.cpp  render.cpp  render.h  s_math.cpp
demo/最终展示demo/: main.cpp  render.cpp  render.h
demo/最终展示demo/exe可执行文件/: GO.iobj  GO.ipdb
demo/混合/: CMakeLists.txt  main.cpp  rasterize.cpp  render.cpp  render.h
demo/贴了纹理的PBR材质球/: main.cpp
devlog/: devlog20200829.md
doc/: 01坐标系统.md  02光栅化&&重心坐标.md  02光栅化.md  03摄像机.md  04光照.md  05材质&&加载模型.md  06面剔除.md  07混合.md  08gamma校正&&HDR简介.md  09法线贴图(Normal Mapping).md  10 PBR基础理论.md  10PBR基础理论.md  CMakeLists.txt  a_simple_way_to_start.md
include/: Triangle.hpp  Vertex.hpp  color.h  config.h  face.hpp  light.h  log_math.hpp  log_system.h  material.hpp  model.hpp  shader_base.h  simple_renderer.h  vector.hpp  vertex.hpp
src/: 2d.cpp  CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.hpp  Makefile  Makefile.env  SimpleRenderer.cpp  VertexArray.cpp  VertexBuffer.cpp  camera.cpp  camera.h  color.cpp  default_shader.cpp  display.cpp  draw2d.cpp  draw3d.cpp  event_callback.cpp  framebuffer.cpp  geometry.cpp  image.cpp  input.cpp  light.cpp  log.cpp  log_system.cpp  main.cpp  material.cpp  model.cpp  model2tga.tga  model2tga_fill.tga  output.tga  primitive_renderer.cpp  rasterize.cpp  rasterize.h  rasterizer.cpp  render.cpp  render.h  renderer  renderer.cpp  s_math.cpp  s_math.h  (+9 more)
src/3rd/: stb_image.h  tiny_obj_loader.h
src/3rd/wqy-zenhei/: 44-wqy-zenhei.conf  66-wqy-zenhei-sharp-no13px.conf  66-wqy-zenhei-sharp.conf  ChangeLog  INSTALL  zenheiset
src/include/: 2d.h  GLDebug.hpp  SimpleRenderer.h  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  buffer.hpp  buffer_base.hpp  camera.h  color.h  common.h  config.h  default_shader.h  device.h  display.h  draw2d.h  draw3d.h  event_callback.h  exception.hpp  face.hpp  framebuffer.h  framebuffer.hpp  geometry.h  image.h  input.h  light.h  log.h  log.hpp  log_system.h  material.hpp  math.hpp  matrix.h  matrix.hpp  model.h  model.hpp  point.hpp  primitive_renderer.hpp  rasterize.h  rasterizer.hpp  render.h  (+15 more)
src/include/glad/: glad.h
src/include/renderers/: deferred_renderer.hpp  per_triangle_renderer.hpp  renderer_base.hpp  tile_based_deferred_renderer.hpp  tile_based_renderer.hpp
src/renderers/: deferred_renderer.cpp  per_triangle_renderer.cpp  renderer_base.cpp  tile_based_deferred_renderer.cpp  tile_based_renderer.cpp
test/: CMakeLists.txt  color_test.cpp  draw2d_test.cpp  draw3d_test.cpp  matrix_test.cpp  point_test.cpp  render_test.cpp  test.cpp  vector_test.cpp
test/system_test/: CMakeLists.txt  README.md  Window.cpp  Window.hpp  camera.h  display.cpp  display.h  glad.c  main.cpp  window.cpp  window.hpp
test/system_test/opengl_test/: CMakeLists.txt  display.cpp  main.cpp
test/unit_test/: CMakeLists.txt  buffer_base_test.cpp  matrix_test.cpp  model_test.cpp
tools/: cppcheck-suppressions.xml
最终结果展示！！！！/: main.cpp
最终结果展示！！！！/exe可执行文件/: GO.iobj  GO.ipdb
